# passage

./: README.rst  autogen.sh  config.lua  meson.build  meson_options.txt
.github/workflows/: build.yml
debian/: .gitignore  changelog  cm4all-passage-client.install  cm4all-passage.install  cm4all-passage.postinst  cm4all-passage.service  cm4all-passage.socket  cm4all-passage.sysusers  control  rules
doc/: conf.py  index.rst
src/: Action.hxx  CgroupProc.cxx  CgroupProc.hxx  Client.cxx  CommandLine.cxx  CommandLine.hxx  Connection.cxx  Connection.hxx  Entity.cxx  Entity.hxx  ExecPipe.cxx  ExecPipe.hxx  FadeChildren.cxx  FadeChildren.hxx  Instance.cxx  Instance.hxx  LAction.cxx  LAction.hxx  LAddress.cxx  LAddress.hxx  LRequest.cxx  LRequest.hxx  LResolver.cxx  LResolver.hxx  Listener.hxx  Main.cxx  MountProc.cxx  MountProc.hxx  Parser.cxx  Parser.hxx  Protocol.hxx  Request.cxx  Request.hxx  SendControl.cxx  SendControl.hxx  Verify.cxx  Verify.hxx
src/system/: SetupProcess.cxx  SetupProcess.hxx
test/: TestParser.cxx  TestSerialize.cxx  meson.build
